fix: spacing for add page grid

--- a/styles/results.module.scss
+++ b/styles/results.module.scss
@@ -21,5 +21,5 @@
 .resultsList {
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
-	gap: 2.5rem 2.5rem;
+	gap: 2.5rem 5rem;
 }
